# mantissa-auto-encoder

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: release.yml
bench/: contenders.py  plots.py  protocol.py  speed.py
mantissa_autoencoder/: __init__.py  datasets.py  layers.py  model.py  models.py  tasks.py
tests/: test_layers.py  test_model.py  test_models.py  test_tasks.py
